# far-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .editorconfig  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_{{cookiecutter.repo_name}}.sh
{{cookiecutter.repo_name}}/doc/: README.md
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  __main__.py  util.py
